syntax = "proto3";

package p8e;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "p8e/util.proto";
option go_package="github.com/FigureTechnologies/p8e-proto-go/pkg/p8e";
option java_package = "io.p8e.proto";
option java_outer_classname = "PK";

enum KeyType {
  ELLIPTIC = 0;
}

enum KeyCurve {
  SECP256K1 = 0;
  P256 = 1;
}

message SigningAndEncryptionPublicKeys {
  PublicKey signing_public_key = 1;
  PublicKey encryption_public_key = 2;
}

message PublicKey {
  bytes public_key_bytes = 1;
  KeyType type = 2;
  KeyCurve curve = 3;
  bool compressed = 4;
}

message PrivateKey {
  bytes key_bytes = 1;
  KeyType type = 2;
  KeyCurve curve = 3;
  bool compressed = 4;
}
